# gameboy-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/bit-flag/: Cargo.toml  README.md
crates/bit-flag-derive/: Cargo.toml
crates/bit-flag-derive/src/: bit_flag.rs  lib.rs
crates/bit-flag/src/: bit_flag.rs  bits_value.rs  lib.rs
crates/bit-flag/tests/: test_bit_flag.rs  test_bits_value.rs
crates/emulator/: Cargo.toml
crates/emulator-core/: Cargo.toml
crates/emulator-core/src/: stack_pointer.rs
crates/emulator-core/src/instruction_set/: instruction.rs
crates/emulator-core/src/instruction_set/all_instructions/: instruction_ccf.rs  instruction_dec.rs  instruction_halt.rs  instruction_jr.rs  instruction_ldh.rs  instruction_or.rs  instruction_push.rs  instruction_ret.rs  instruction_rlca.rs  instruction_stop.rs
crates/emulator-core/src/rendering/: render.rs
crates/emulator-core/tests/: test_hellow_world.rs  test_read_instruction.rs
crates/emulator-derive/: Cargo.toml
crates/emulator-derive/src/: bit_flag.rs  control_register.rs  lib.rs
crates/emulator/src/: cpu_register.rs  debugger.rs  emulator.rs  flags.rs  interrupt.rs  lib.rs  memory.rs  program_counter.rs  register.rs  rom.rs  stack_handlers.rs
crates/emulator/src/control_registers/: interrupt.rs  lcd_status.rs  lcdc.rs  mod.rs  register.rs  scrolling.rs  timer.rs
crates/emulator/src/instruction_set/: argument.rs  instruction.rs  mod.rs
crates/emulator/src/instruction_set/all_instructions/: instruction_adc.rs  instruction_add.rs  instruction_and.rs  instruction_bit.rs  instruction_call.rs  instruction_ccf.rs  instruction_cp.rs  instruction_cpl.rs  instruction_daa.rs  instruction_dec.rs  instruction_di.rs  instruction_ei.rs  instruction_halt.rs  instruction_inc.rs  instruction_jp.rs  instruction_jr.rs  instruction_ld.rs  instruction_ldh.rs  instruction_nop.rs  instruction_or.rs  instruction_pop.rs  instruction_push.rs  instruction_res.rs  instruction_ret.rs  instruction_reti.rs  instruction_rl.rs  instruction_rla.rs  instruction_rlc.rs  instruction_rlca.rs  instruction_rr.rs  instruction_rra.rs  instruction_rrc.rs  instruction_rrca.rs  instruction_rst.rs  instruction_sbc.rs  instruction_scf.rs  instruction_set.rs  instruction_sla.rs  instruction_sra.rs  instruction_srl.rs  (+5 more)
crates/emulator/src/rendering/: mod.rs  ppu.rs  render.rs  screen.rs  tile.rs
crates/emulator/tests/: test_background.rs  test_frame.rs  test_hellow_world.rs  test_opcodes.rs  test_read_instruction.rs
crates/runner/: Cargo.toml
crates/runner/src/: app_state.rs  draw_screen.rs  emulator_debugger.rs  lib.rs  main.rs
crates/runner/src/debug_ui/: debug_table.rs  mod.rs  tile_indices.rs  ui.rs
