[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Denis Lavrentev"]
license = "Apache-2.0-or-MIT"
edition = "2021"
repository = "https://github.com/Defernus/gameboy-emulator"
keywords = ["gameboy", "emulator"]

[workspace.dependencies]
deluxe = "0.5.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2", features = ["full"] }
enum_dispatch = "0.3"
thiserror = "1.0"
macroquad = "0.4.8"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
