[package]
name = "emulator-derive"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
proc-macro = true


[dependencies]
deluxe.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true


[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
