[package]
name = "emulator"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
enum_dispatch.workspace = true

emulator-derive = { path = "../emulator-derive" }
bit-flag = { path = "../bit-flag" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
