[package]
name = "runner"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
macroquad.workspace = true
sqlite.workspace = true
thiserror.workspace = true

emulator = { path = "../emulator" }
